@@ -5,6 +5,11 @@ This guide describes the list of incompatible changes between the different
 herbstluftwm releases and how to migrate scripts and configuration.
 See the link:NEWS[] file for a list of all changes and new features.
 
+0.9.2 to 0.9.3
+--------------
+The command 'cycle_value' now expects an attribute path instead of a settings
+name. For compatibility reasons, passing settings name directly (without the
+prefix +settings.+) is still supported.
 
 0.8.3 to 0.9.0
 --------------
