@@ -47,7 +47,7 @@ def test_substitute(hlwm):
 
 @pytest.mark.parametrize('prefix', ['set_attr settings.',
                                     'attr settings.',
-                                    'cycle_value ',
+                                    'cycle_value settings.',
                                     'set '])
 def test_set_attr_completion(hlwm, prefix):
     assert hlwm.complete(prefix + "swap_monitors_to_get_tag") \
